--- a/_posts/2019-05-23-find-job.md
+++ b/_posts/2019-05-23-find-job.md
@@ -7,7 +7,7 @@ date:   2019-05-23
 published: true
 draft: true
 lang: en
-alt: "Before and after screenshot of the Canada.ca home page."
+alt: "Before and after screenshot of Government of Canada jobs page"
 description: "The Public Service Commission worked with the Digital Transformation Office (DTO) and other partners over the summer to optimize the task of finding a government job on the Canada.ca website."
 ---
 **By Karen Nimblett, Public Service Commission**
