--- a/_posts/2020-02-05-CS-02-tasks.md
+++ b/_posts/2020-02-05-CS-02-tasks.md
@@ -61,6 +61,33 @@ We looked at the success rate for all tasks that were tested with over 20 partic
 
 Lower performing tasks often included applying or registering for things. It’s difficult to pinpoint the cause of the lower success rates. Possible causes include:
 
+* the type of reporting method (task funnels were often used)
+* the nature of the task being more complex with both online and offline requirements
+* issues with the actual online experience
+
+## The pros and cons of each reporting method
+
+Here’s what we learned about each reporting method.
+
+### Usability testing
+
+Moderated usability testing is a fantastic way to learn about how people use your site, and to see where there are problems. It’s also the gold standard for measuring task success. But, usability tests focused on task performance are a bit different from standard usability testing. The main difference is that task performance testing tends to use more participants (at least 16). It focuses both on arriving at a reliable success score per task and on learning about how people use the site.
+
+Moderated usability testing results are difficult to compare across many institutions. They rely on phrasing tasks and scenarios consistently. As well, the cost, time and expertise needed to run and analyze rigorous usability tests can be challenging for smaller institutions.
+
+That said, nothing can replace watching real people use your site. We always recommend incorporating usability testing into your web team’s toolkit.
+
+### Task funnel
+
+This option gave institutions the ability to report on a single task. They used anonymized web analytics to track visitors’ paths from beginning a task, to the successful completion.
+
+Funnels work best for tracking conversions over multiple pages where there is a single sequence of steps to follow (such as an e-commerce checkout). The drawback is that people drop out of funnels for reasons that have nothing to do with the effectiveness of the experience.
+
+This method is not great for answer-finding tasks. These often have multiple path options making them difficult or impossible to track.
+
+Several of those who used this method also noted that they found it challenging because of outdated analytics platforms and the inability to track users through secure areas of a website.  
+
+We found that the quality of data we received from task funnels was mixed. This method was sometimes confused with a findability study. Users were asked if they were able to find links from a defined page. There are better methods to determine findability such as [tree testing or click testing](https://www.nngroup.com/articles/navigation-ia-tests/).
 
 
 
