--- a/_posts/2020-02-05-CS-02-tasks.md
+++ b/_posts/2020-02-05-CS-02-tasks.md
@@ -52,7 +52,7 @@ We compiled the data that each institution sent. We tagged each task with the co
 * 15 jobs and careers seeking tasks
 * 18 tasks about downloading, signing in, purchasing, or calculating
 
-<b>Task success</b>
+#### Task success
 We looked at the success rate for all tasks that were tested with over 20 participants. 101 tasks met this criteria.
 * The average success rate for these 101 tasks was 64%
 * 32 tasks had a high success rating of over 80%
