--- a/_posts/2020-02-05-CS-02-tasks.md
+++ b/_posts/2020-02-05-CS-02-tasks.md
@@ -53,6 +53,7 @@ We compiled the data that each institution sent. We tagged each task with the co
 * 18 tasks about downloading, signing in, purchasing, or calculating
 
 #### Task success
+
 We looked at the success rate for all tasks that were tested with over 20 participants. 101 tasks met this criteria.
 * The average success rate for these 101 tasks was 64%
 * 32 tasks had a high success rating of over 80%
@@ -89,17 +90,69 @@ Several of those who used this method also noted that they found it challenging 
 
 We found that the quality of data we received from task funnels was mixed. This method was sometimes confused with a findability study. Users were asked if they were able to find links from a defined page. There are better methods to determine findability such as [tree testing or click testing](https://www.nngroup.com/articles/navigation-ia-tests/).
 
+### Online survey
+
+An online survey was the preferred method for collecting top task success data. We found it delivered comparable results across institutions. For institutions beginning their journey in top task management, the survey method is the easiest to implement and rerun year after year.
+
+The Digital Transformation Office developed a survey that any institution could use. Institutions only needed to write their task scenarios and allow sufficient time to run the survey. This survey was the only method that allowed write-in responses. That gave institutions the chance to uncover new or under-represented tasks.  
+
+Results from the surveys were automatically collected into dashboards. This further reduced the institution’s workload for compiling and analyzing the data.
+
+The Digital Transformation Office survey prompted visitors to:
+
+* select the task that they came to do (including a write-in option in case their task wasn’t listed)
+* confirm if they were able to complete their task
+* select why they were not able to complete their task (including a write-in option) if they couldn’t
+
+We found that this method allowed the best balance between:
+
+* standardizing data
+* helping institutions understand why people visit their pages
+* pinpointing the parts of the online experience causing service delivery issues
+
+The first round of reports uncovered challenges in terms of ease of execution and data quality.  We’re taking these findings into consideration as we plan the 2020 exercise.
+
+## Simplifying our methods for better results
+
+Offering multiple methods to report on top tasks was meant to remove barriers to data collection. The reality was that it affected our ability to see trends across institutions. The different methods created inconsistent data. It’s hard to compare the results of a task funnel to a usability test!  
+
+## Moving forward: A single reporting method for 2020
+
+It’s clear that a single reporting method would help us see the big picture of online task delivery across the Government of Canada.
+
+The online survey method provides a standardized data collection method. It is technically easy to implement, and provides clear data about top task strengths and weaknesses.
+
+The feedback we heard from institutions using this method was positive. It indicated a culture shift to top task management.
+
+* “The survey allows us to prioritize which section on the website should be optimized first, for example our focus/energy should go towards top tasks that are not performing as [well] as the other ones.” - Global Affairs Canada
+
+* “Over the course of time, the findings of WES (Web Experience Survey) have played a part in the evolution of the Statistics Canada website.” - Statistics Canada
+
+For the next task collection request in 2020, we will ask that institutions use an online survey.
+
+## Final word
+
+In 2020, all institutions subject to the [Policy on Communications and Federal Identity](https://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=30683)(Schedules I, I.1 and II of the [Financial Administration Act](https://laws-lois.justice.gc.ca/eng/acts/F-11/page-30.html#docCont)) will be asked to report.
 
 
+### We want to hear from you
 
+What would make online top task reporting easier for you to complete?
 
-
-
-
-
+* tips and best practices for writing top task survey questions
+* advice on how to break down big tasks into smaller, measurable steps
+* instructions on what to do if your service includes online and offline delivery channels
+* other suggestions?
 
 ## Inspired by what you learned? Share this post with your team.
 
  Connect with the Digital Transformation Office at TBS:
 * Email: [dto-btn@tbs-sct.gc.ca](mailto:dto-btn@tbs-sct.gc.ca)
 * Twitter: #Canadadotca
+* Slack: [http://design-GC-conception.slack.com](https://design-gc-conception.slack.com/join/shared_invite/enQtODE1OTc5Mzg5NzQ4LWQ3MjZjMTdjMjk2ZTZmMTJjYWQ3ZmRiNDYwYjRmN2NjYzQyNjFlNDBlY2FkNWE1ODg2YjExY2QwZmVjN2MwMGM)
+
+## Learn more
+
+* [Improve digital services by measuring outcomes](https://blog.canada.ca/2018/02/23/Improve-digital-services-measuring-outcomes.html)
+* [See how we identify top tasks for Canada.ca](https://blog.canada.ca/2017/12/11/top-100-for-gc.html)
+* [See how measuring task success is key for optimizing Canada.ca top tasks](https://blog.canada.ca/2017/12/12/optimization-overview.html)
