--- a/_posts/2020-02-05-taches-CS-02.md
+++ b/_posts/2020-02-05-taches-CS-02.md
@@ -19,11 +19,13 @@ En analysant les résultats au début de 2020, nous avons beaucoup appris sur le
 
 ## Contexte
 
-The official name of the new indicator is “Communications Services - Outcome 2 (CS-O2).” It is part of the internal services indicators under the [Policy on Results](https://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=31300).  
+Le nom officiel du nouvel indicateur est « Services de communication - Résultat 2 (SC-O2) ». Cet indicateur fait partie des indicateurs des services internes en vertu de la  [Politique sur les Résultats](https://www.tbs-sct.gc.ca/pol/doc-fra.aspx?id=31300).  
 
-Reporting on this indicator pushes Government of Canada institutions to make service delivery a priority. It helps them plan their digital work around improving success for top tasks online. This aligns with the [Government of Canada’s Digital Standard](https://www.canada.ca/en/government/system/digital-government/government-canada-digital-standards.html) on empowering staff to deliver better services.
+L’établissement de rapports sur cet indicateur pousse les institutions du gouvernement du Canada à faire de la prestation de services une priorité. Cela les aide à planifier leur travail numérique en vue d’améliorer leur réussite pour les tâches principales en ligne. Cette démarche s’harmonise avec les [Normes numériques du gouvernement du Canada](https://www.canada.ca/fr/gouvernement/systeme/gouvernement-numerique/normes-numeriques-gouvernement-canada.html) sur l’habilitation du personnel à offrir de meilleurs services.
 
-<blockquote><p style="color: #1E5D71 !important;">“Change the key metrics and you will change the organization. Change the organization and you will deliver vastly better digital services.”</p>
+<blockquote><p style="color: #1E5D71 !important;">« Change the key metrics and you will change the organization. Change the organization and you will deliver vastly better digital services. »»
+
+</p>
 </blockquote>
 
 <p>-[Gerry McGovern, February 2018](https://blog.canada.ca/2018/02/23/Improve-digital-services-measuring-outcomes.html)</p>
