--- a/_posts/2020-02-05-taches-CS-02.md
+++ b/_posts/2020-02-05-taches-CS-02.md
@@ -23,42 +23,43 @@ Le nom officiel du nouvel indicateur est « Services de communication - Résulta
 
 L’établissement de rapports sur cet indicateur pousse les institutions du gouvernement du Canada à faire de la prestation de services une priorité. Cela les aide à planifier leur travail numérique en vue d’améliorer leur réussite pour les tâches principales en ligne. Cette démarche s’harmonise avec les [Normes numériques du gouvernement du Canada](https://www.canada.ca/fr/gouvernement/systeme/gouvernement-numerique/normes-numeriques-gouvernement-canada.html) sur l’habilitation du personnel à offrir de meilleurs services.
 
-<blockquote><p style="color: #1E5D71 !important;">« Change the key metrics and you will change the organization. Change the organization and you will deliver vastly better digital services. »»
+<blockquote><p style="color: #1E5D71 !important;">« Changez les paramètres clés et vous changerez l’organisation. Changez l’organisation et vous livrerez des services numériques grandement supérieurs. »»
 
 </p>
 </blockquote>
 
 <p>-[Gerry McGovern, February 2018](https://blog.canada.ca/2018/02/23/Improve-digital-services-measuring-outcomes.html)</p>
 
-In the spirit of experimentation and respect for available resources, the Digital Transformation Office offered 3 methods to complete this report:
+Dans un esprit d’expérimentation et de respect des ressources disponibles, le Bureau de la transformation numérique a proposé trois méthodes pour réaliser ce rapport :
 
-* usability testing
-* task funnel analysis
-* task completion survey
+* l’essai de convivialité;
+* l’analyse d’entonnoirs de tâches;
+* l’enquête sur l’achèvement des tâches.
 
-## How tasks were measured across the reporting institutions
+## Mode de mesure des tâches dans l’ensemble des établissements déclarants
 
-We compiled the data that each institution sent. We tagged each task with the collection method, number of participants, time period, and success rate.  Here’s what we found.
+Nous avons compilé les données que chaque établissement a envoyées. Nous avons associé à chaque tâche la méthode de collecte, le nombre de participants, la période et le taux de réussite. Voici ce que nous avons constaté :
 
-<b>Reporting method</b>
-* 9 Surveys
-* 8 Usability tests
-* 7 Task funnels
-* 2 Other methods
+<b>Méthode de déclaration</b>
 
-<b>Types of tasks reported </b>
-* 283 reported tasks
-* Over 200 tasks about looking for answers to questions
-* 23 tasks about applying, renewing, filing, or registering
-* 15 contact us tasks
-* 15 jobs and careers seeking tasks
-* 18 tasks about downloading, signing in, purchasing, or calculating
+* 9 sondages
+* 8 essais de convivialité
+* 7 analyses d’entonnoirs de tâches
+* 2 autres méthodes
 
-#### Task success
+<b>Types de tâches déclarées</b>
+* 283 tâches déclarées
+* Plus de 200 tâches liées à la recherche de réponses à des questions
+* 23 tâches étaient liées à la présentation d’une demande, au renouvellement, au classement ou à l’enregistrement
+* 15 tâches étaient liées à la façon de nous contacter
+* 15 tâches étaient liées à la recherche d’emplois et de carrières
+* 18 tâches étaient liées au téléchargement, à l’ouverture de session, à l’achat ou au calcul
 
-We looked at the success rate for all tasks that were tested with over 20 participants. 101 tasks met this criteria.
-* The average success rate for these 101 tasks was 64%
-* 32 tasks had a high success rating of over 80%
+#### Réussite d’achèvement de la tâche
+
+Nous avons considéré le taux de réussite pour toutes les tâches qui étaient testées avec plus de 20 participants. 101 tâches répondaient à ce critère.
+* Le taux de réussite moyen de ces 101 tâches était de 64 %.
+* 32 tâches ont obtenu une cote de réussite élevée de plus de 80 %
 
 9 institutions had high success tasks. These were mostly answer-finding tasks. Topics included border wait times, career opportunities, and travel health notices.
 
