--- a/_posts/2020-02-05-taches-CS-02.md
+++ b/_posts/2020-02-05-taches-CS-02.md
@@ -61,31 +61,31 @@ Nous avons considéré le taux de réussite pour toutes les tâches qui étaient
 * Le taux de réussite moyen de ces 101 tâches était de 64 %.
 * 32 tâches ont obtenu une cote de réussite élevée de plus de 80 %
 
-9 institutions had high success tasks. These were mostly answer-finding tasks. Topics included border wait times, career opportunities, and travel health notices.
+Neuf établissements ont connu un franc succès en ce qui concerne une tâche. Il s’agissait surtout de tâches liées à la recherche de réponses. Les sujets abordés comprenaient les temps d’attente à la frontière, les possibilités de carrière et les conseils de santé aux voyageurs.
 
 Lower performing tasks often included applying or registering for things. It’s difficult to pinpoint the cause of the lower success rates. Possible causes include:
 
-* the type of reporting method (task funnels were often used)
-* the nature of the task being more complex with both online and offline requirements
-* issues with the actual online experience
+* le type de méthode de déclaration (les entonnoirs de tâches étaient souvent utilisés)
+* la nature de la tâche étant plus complexe avec les exigences en ligne et hors ligne combinées
+* des problèmes liés à l’expérience réelle en ligne.
 
-## The pros and cons of each reporting method
+## Les avantages et les inconvénients de chaque méthode de déclaration
 
-Here’s what we learned about each reporting method.
+Voici ce que nous avons appris au sujet de chaque méthode de production de rapport.
 
-### Usability testing
+### Essais de convivialité
 
-Moderated usability testing is a fantastic way to learn about how people use your site, and to see where there are problems. It’s also the gold standard for measuring task success. But, usability tests focused on task performance are a bit different from standard usability testing. The main difference is that task performance testing tends to use more participants (at least 16). It focuses both on arriving at a reliable success score per task and on learning about how people use the site.
+L’essai de convivialité dirigé est une formidable façon de découvrir comment les visiteurs utilisent votre site et de cerner où se trouvent les problèmes. C’est aussi la norme d’excellence pour mesurer la réussite d’une tâche. Toutefois, les essais de convivialité axés sur l’achèvement des tâches sont un peu différents des essais de convivialité standards. La principale différence est que les essais relatifs à l’achèvement des tâches ont tendance à faire appel à un plus grand nombre de participants (au moins 16). Cet essai est axé à la fois sur l’obtention d’une cote de réussite fiable par tâche et sur la découverte du mode d’utilisation du site par les visiteurs.
 
-Moderated usability testing results are difficult to compare across many institutions. They rely on phrasing tasks and scenarios consistently. As well, the cost, time and expertise needed to run and analyze rigorous usability tests can be challenging for smaller institutions.
+Les résultats des essais de convivialité dirigés sont difficiles à comparer entre de nombreux établissements. La comparabilité dépend de l’uniformité de la formulation des tâches et des scénarios. De plus, il peut être difficile pour les petits établissements d’assurer le coût, le temps et l’expertise nécessaires pour effectuer et analyser des essais de convivialité rigoureux.
 
-That said, nothing can replace watching real people use your site. We always recommend incorporating usability testing into your web team’s toolkit.
+Cela dit, rien ne peut remplacer l’observation de personnes en chair et en os qui utilisent votre site. Nous recommandons toujours d’intégrer les essais de convivialité à la trousse d’outils de votre équipe Web.
 
-### Task funnel
+### Entonnoirs de tâches
 
-This option gave institutions the ability to report on a single task. They used anonymized web analytics to track visitors’ paths from beginning a task, to the successful completion.
+Cette option a permis aux établissements de faire rapport sur une seule tâche. Ils ont utilisé les outils analytiques Web anonymisés pour suivre les parcours des visiteurs depuis le début d’une tâche jusqu’à l’achèvement réussi.
 
-Funnels work best for tracking conversions over multiple pages where there is a single sequence of steps to follow (such as an e-commerce checkout). The drawback is that people drop out of funnels for reasons that have nothing to do with the effectiveness of the experience.
+Les entonnoirs fonctionnent mieux pour suivre les conversions sur plusieurs pages où il y a une seule séquence d’étapes à suivre (comme une caisse de commerce électronique). L’inconvénient est que les visiteurs abandonnent les entonnoirs pour des raisons qui n’ont rien à voir avec l’efficacité de l’expérience.
 
 This method is not great for answer-finding tasks. These often have multiple path options making them difficult or impossible to track.
 
