--- a/_posts/2020-02-05-taches-CS-02.md
+++ b/_posts/2020-02-05-taches-CS-02.md
@@ -87,25 +87,25 @@ Cette option a permis aux établissements de faire rapport sur une seule tâche.
 
 Les entonnoirs fonctionnent mieux pour suivre les conversions sur plusieurs pages où il y a une seule séquence d’étapes à suivre (comme une caisse de commerce électronique). L’inconvénient est que les visiteurs abandonnent les entonnoirs pour des raisons qui n’ont rien à voir avec l’efficacité de l’expérience.
 
-This method is not great for answer-finding tasks. These often have multiple path options making them difficult or impossible to track.
+Cette méthode n’est pas idéale pour les tâches liées à la recherche de réponses. Celles-ci aboutissent souvent à des options multiples, de sort qu’il est difficile ou impossible de suivre le cheminement de l’utilisateur.
 
-Several of those who used this method also noted that they found it challenging because of outdated analytics platforms and the inability to track users through secure areas of a website.  
+Bon nombre des établissements qui ont utilisé cette méthode ont également signalé que la désuétude des plateformes d’analyse et l’incapacité de suivre les utilisateurs dans les zones sécurisées d’un site Web compliquaient l’analyse.   
 
-We found that the quality of data we received from task funnels was mixed. This method was sometimes confused with a findability study. Users were asked if they were able to find links from a defined page. There are better methods to determine findability such as [tree testing or click testing](https://www.nngroup.com/articles/navigation-ia-tests/).
+Nous avons constaté que la qualité des données que nous avons reçues des entonnoirs de tâches était mitigée. Cette méthode était parfois confondue avec une étude sur la répérabilité. On a demandé aux utilisateurs s’ils pouvaient trouver des liens à partir d’une page définie. Il existe de meilleures méthodes pour déterminer la répérabilité, comme [l’essai de l’arborescence ou l’essai des clics](https://www.nngroup.com/articles/navigation-ia-tests/).
 
-### Online survey
+### Sondage en ligne
 
-An online survey was the preferred method for collecting top task success data. We found it delivered comparable results across institutions. For institutions beginning their journey in top task management, the survey method is the easiest to implement and rerun year after year.
+Le sondage en ligne était la méthode privilégiée pour recueillir des données sur la réussite des tâches principales. Nous avons constaté qu’il donnait des résultats comparables d’un établissement à l’autre. Pour les établissements qui entreprennent leur parcours à partir de la gestion des tâches principales, la méthode du sondage est la plus facile à mettre en œuvre et à reproduire année après année.
 
-The Digital Transformation Office developed a survey that any institution could use. Institutions only needed to write their task scenarios and allow sufficient time to run the survey. This survey was the only method that allowed write-in responses. That gave institutions the chance to uncover new or under-represented tasks.  
+Le Bureau de la transformation numérique a élaboré un sondage que n’importe quel établissement pourrait utiliser. Les établissements n’avaient qu’à rédiger leurs scénarios de tâches et à accorder suffisamment de temps pour exécuter le sondage. Ce sondage était la seule méthode qui permettait les réponses par écrit. Cette méthode a permis aux établissements de découvrir des tâches nouvelles ou sous-représentées.   
 
-Results from the surveys were automatically collected into dashboards. This further reduced the institution’s workload for compiling and analyzing the data.
+Les résultats des sondages ont été compilés automatiquement dans des tableaux de bord. Cela a réduit davantage la charge de travail de l’établissement pour la compilation et l’analyse des données.
 
-The Digital Transformation Office survey prompted visitors to:
+Le sondage du Bureau de la transformation numérique demandait aux visiteurs de:
 
-* select the task that they came to do (including a write-in option in case their task wasn’t listed)
-* confirm if they were able to complete their task
-* select why they were not able to complete their task (including a write-in option) if they couldn’t
+* choisir la tâche qu’ils sont venus faire (y compris une option d’édition au cas où leur tâche ne serait pas indiquée);
+* confirmer s’ils ont été en mesure d’accomplir leur tâche
+* choisir la raison pour laquelle ils n’ont pas été en mesure d’accomplir leur tâche (y compris une option d’édition) s’ils n’ont pas pu le faire;
 
 We found that this method allowed the best balance between:
 
