--- a/_posts/2020-02-05-taches-CS-02.md
+++ b/_posts/2020-02-05-taches-CS-02.md
@@ -107,55 +107,55 @@ Le sondage du Bureau de la transformation numérique demandait aux visiteurs de:
 * confirmer s’ils ont été en mesure d’accomplir leur tâche
 * choisir la raison pour laquelle ils n’ont pas été en mesure d’accomplir leur tâche (y compris une option d’édition) s’ils n’ont pas pu le faire;
 
-We found that this method allowed the best balance between:
+Nous avons constaté que cette méthode favorisait le meilleur équilibre entre :
 
-* standardizing data
-* helping institutions understand why people visit their pages
-* pinpointing the parts of the online experience causing service delivery issues
+* la normalisation des données
+* La facilité, pour les établissements, de comprendre pourquoi les utilisateurs visitent leurs pages;
+* cerner les parties de l’expérience en ligne qui causent des problèmes de prestation de services;
 
-The first round of reports uncovered challenges in terms of ease of execution and data quality.  We’re taking these findings into consideration as we plan the 2020 exercise.
+La première série de rapports a mis au jour des défis en termes de facilité d’exécution et de qualité des données. Nous tenons compte de ces constatations dans la planification de l’exercice 2020.
 
-## Simplifying our methods for better results
+## Simplification de nos méthodes pour obtenir de meilleurs résultats
 
-Offering multiple methods to report on top tasks was meant to remove barriers to data collection. The reality was that it affected our ability to see trends across institutions. The different methods created inconsistent data. It’s hard to compare the results of a task funnel to a usability test!  
+Afin d’éliminer les obstacles à la collecte de données, nous avons offert différentes méthodes pour rendre compte des tâches principales. La réalité est que cela a eu une incidence sur notre capacité de voir les tendances entre les établissements. L’utilisation de différentes méthodes a miné l’uniformité des données. Il est difficile de comparer les résultats d’un entonnoir de tâches à un test de convivialité!
 
-## Moving forward: A single reporting method for 2020
+## Prochaines étapes : Une méthode de production de rapports unique pour 2020
 
-It’s clear that a single reporting method would help us see the big picture of online task delivery across the Government of Canada.
+Il est clair qu’une méthode de production de rapports unique nous aiderait à avoir une vue d’ensemble de l’exécution des tâches en ligne dans l’ensemble du gouvernement du Canada.
 
-The online survey method provides a standardized data collection method. It is technically easy to implement, and provides clear data about top task strengths and weaknesses.
+La méthode de sondage en ligne offre une méthode de collecte de données normalisée. Elle est facile à mettre en œuvre sur le plan technique et fournit des données claires sur les forces et les faiblesses des tâches principales.
 
-The feedback we heard from institutions using this method was positive. It indicated a culture shift to top task management.
+Les commentaires que nous avons reçus des établissements utilisant cette méthode étaient positifs. Cela dénote un changement de culture vers la gestion des tâches principales.
 
-* “The survey allows us to prioritize which section on the website should be optimized first, for example our focus/energy should go towards top tasks that are not performing as [well] as the other ones.” - Global Affairs Canada
+* « Le sondage nous permet d’établir l’ordre de priorité des sections du site Web qui devraient être optimisées en premier, par exemple, notre attention/notre énergie devrait être consacrée aux tâches principales qui ne sont pas aussi efficaces que les autres. » - Affaires mondiales Canada
 
-* “Over the course of time, the findings of WES (Web Experience Survey) have played a part in the evolution of the Statistics Canada website.” - Statistics Canada
+* « Au fil du temps, les conclusions du SEW (Sondage sur l’expérience Web) ont joué un rôle dans l’évolution du site Web de Statistique Canada. » - Statistique Canada
 
-For the next task collection request in 2020, we will ask that institutions use an online survey.
+Pour la prochaine demande de collecte de tâches en 2020, nous demanderons aux établissements d’utiliser un sondage en ligne.
 
-## Final word
+## Mot de la fin
 
-In 2020, all institutions subject to the [Policy on Communications and Federal Identity](https://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=30683) (Schedules I, I.1 and II of the [Financial Administration Act](https://laws-lois.justice.gc.ca/eng/acts/F-11/page-30.html#docCont)) will be asked to report.
+En 2020, tous les établissements assujettis à la [Politique sur les communications et l’image de marque](https://www.tbs-sct.gc.ca/pol/doc-fra.aspx?id=30683) (Annexes I, I.1 et II de la [Loi sur la gestion des finances publiques]()) devront présenter des rapports.
 
 
-### We want to hear from you
+### Nous voulons avoir votre opinion
 
-What would make online top task reporting easier for you to complete?
+Qu’est-ce qui vous permettrait de produire des rapports sur les tâches principales en ligne plus facilement?
 
-* tips and best practices for writing top task survey questions
-* advice on how to break down big tasks into smaller, measurable steps
-* instructions on what to do if your service includes online and offline delivery channels
-* other suggestions?
+* Conseils et pratiques exemplaires pour la rédaction des questions du sondage sur les tâches principales
+* Conseils sur la façon de décomposer les grandes tâches en étapes plus petites et mesurables
+* Instructions sur ce qu’il faut faire si les services offerts dépendent de modes de prestation en ligne et hors ligne
+* Autres suggestions?
 
-## Inspired by what you learned? Share this post with your team.
+## Ce que vous avez appris vous inspire-t-il? Partagez cette publication avec votre équipe
 
- Connect with the Digital Transformation Office at TBS:
-* Email: [dto-btn@tbs-sct.gc.ca](mailto:dto-btn@tbs-sct.gc.ca)
-* Twitter: #Canadadotca
-* Slack: [http://design-GC-conception.slack.com](https://design-gc-conception.slack.com/join/shared_invite/enQtODE1OTc5Mzg5NzQ4LWQ3MjZjMTdjMjk2ZTZmMTJjYWQ3ZmRiNDYwYjRmN2NjYzQyNjFlNDBlY2FkNWE1ODg2YjExY2QwZmVjN2MwMGM)
+Communiquez avec le Bureau de la transformation numérique du SCT :
+* Courriel : dto-btn@tbs-sct.gc.ca
+* Twitter : #Canadadotca
+* Slack : [http://design-GC-conception.slack.com](https://design-gc-conception.slack.com/join/shared_invite/enQtODE1OTc5Mzg5NzQ4LWQ3MjZjMTdjMjk2ZTZmMTJjYWQ3ZmRiNDYwYjRmN2NjYzQyNjFlNDBlY2FkNWE1ODg2YjExY2QwZmVjN2MwMGM)
 
-## Learn more
+## Pour en savoir davantage
 
-* [Improve digital services by measuring outcomes](https://blog.canada.ca/2018/02/23/Improve-digital-services-measuring-outcomes.html)
-* [See how we identify top tasks for Canada.ca](https://blog.canada.ca/2017/12/11/top-100-for-gc.html)
-* [See how measuring task success is key for optimizing Canada.ca top tasks](https://blog.canada.ca/2017/12/12/optimization-overview.html)
+* [Mesurer les résultats pour améliorer les services numériques](https://blogue.canada.ca/2018/02/23/Mesurer-r%C3%A9sultats-am%C3%A9liorer-services-num%C3%A9riques.html)
+* [Voyez De quelle façon déterminons-nous les principales tâches pour Canada.ca](https://blogue.canada.ca/2017/12/12/apercu-d-optimisation.html)
+* [Voyez Comment nous optimisons les principales tâches sur le site Canada.ca](https://blogue.canada.ca/2017/12/11/100-taches-du-gc.html)
